--- a/src/pages/landingPage.css
+++ b/src/pages/landingPage.css
@@ -28,12 +28,21 @@
   margin: 60px;
 }
 
-#get-started-btn {
-  width: 200px;
+#find-sponsor-btn {
+  width: 180px;
   color: white;
   background-color: #ffbb33;
   border-color: #ffbb33;
   margin: 20px 0;
+  font-weight: 600;
+}
+#sponsor-players-btn {
+  width: 180px;
+  color: #ffbb33;
+  background-color: #2c2e3e;
+  border-color: #ffbb33;
+  margin: 20px 0;
+  margin-left: 30px;
   font-weight: 600;
 }
 
